# mt940-writer

./: .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  mt940_writer.py  pyproject.toml  setup.cfg  setup.py  test_mt940_writer.py  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_mt940_writer.py
