[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [".git/", ".eggs/", ".tox/", "build/", "dist/", "env/", "venv/"]
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10
