[metadata]
name = mt940-writer
version = attr: mt940_writer.__version__
url = https://github.com/ministryofjustice/mt940-writer
author = Ministry of Justice Digital & Technology
author_email = dev@digital.justice.gov.uk
description = Writer for MT-940 bank statements
long_description = file: README.rst
license = MIT
keywords =
    mt940
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
; NB: looser python version requirement than what's tested
python_requires = >=3.6
py_modules =
    mt940_writer
include_package_data = true

[flake8]
exclude = .git/,.eggs/,.tox/,build/,dist/,env/,venv/
max-complexity = 10
max-line-length = 120

[coverage:run]
omit =
    setup.py
    */tests/*
    .eggs/*
    .tox/*
